[package]
name = "remote-actuator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckscriptsdk = "0.8.12"
duckscript = "0.7.2"
axum = "0.5.7"
toml = "0.5.9"
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
once_cell = "1.12"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "sqlite", "offline"] }
lz4_flex = "0.9.3"
sha2 = "0.10.2"
base64 = "0.13.0"
tar = "0.4"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }
walkdir = "2"
either = { version = "1", features = ["serde"] }
textnonce = "1"
chrono = "0.4"
log = "0.4.0"
env_logger = "0.9"
colored = "2"
